# NLP-LLM

./: README.md
crewai-stripe/: .gitignore  Dockerfile  README.md  lambda_function.py  pyproject.toml  requirements.txt
crewai-stripe/src/stripe/: crew.py  main.py
crewai-stripe/src/stripe_crew/: crew.py  main.py
crewai-stripe/src/stripe_crew/config/: agents.yaml  tasks.yaml
crewai-stripe/tests/: __init__.py  requirements.txt  test_docker.py  test_event.json  test_stripeui.py
websummarizer_crew/: .gitignore  Dockerfile  README.md  lambda_function.py  pyproject.toml  requirements.txt
websummarizer_crew/src/websummarizeragent/: __main__.py  crew.py  main.py
websummarizer_crew/src/websummarizeragent/config/: agents.yaml  tasks.yaml
websummarizer_crew/tests/: requirements.txt  test_websummarizer.py  test_webui.py
