[project]
name = "websummarizeragent"
version = "0.1.0"
description = "Web summarizer agent with Stripe payment integration"
authors = [{ name = "Noah Cashin", email = "noahc959@icloud.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "stripe>=7.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "langchain>=0.2.2",
    "langchain-community>=0.0.24",
    "langchain-huggingface>=0.1.2",
]

[project.scripts]
websummarizeragent = "websummarizeragent.main:run"
run_crew = "websummarizeragent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/websummarizeragent"]

[tool.hatch.build]
include = [
    "src/websummarizeragent/**/*.py",
    "src/websummarizeragent/**/*.yaml",
    "lambda_function.py"
]
